--- a/YoutubeDownloader.CLI/YoutubeDownloader.csproj
+++ b/YoutubeDownloader.CLI/YoutubeDownloader.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="YoutubeDownloader.Core\YoutubeDownloader.Core.csproj" />
+    <ProjectReference Include="..\YoutubeDownloader.Core\YoutubeDownloader.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
