--- a/YoutubeDownloader.UI/YoutubeDownloader.UI.csproj
+++ b/YoutubeDownloader.UI/YoutubeDownloader.UI.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="YoutubeDownloader.UI.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\YoutubeDownloader.Core\YoutubeDownloader.Core.csproj" />
   </ItemGroup>
 </Project>
