--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,38 +33,27 @@ jobs:
       with:
         dotnet-version: 10.0.x
 
-    - name: Update app.manifest version (Unix)
-      if: runner.os != 'Windows'
+    - name: Make scripts executable (Linux)
+      if: runner.os == 'Linux'
       run: |
-        VERSION=$(cat VERSION)
-        if [[ "${{ runner.os }}" == "macOS" ]]; then
-          sed -i '' "s/assemblyIdentity version=\"[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*\"/assemblyIdentity version=\"${VERSION}.0\"/" YoutubeDownloader.UI/app.manifest
-        else
-          sed -i "s/assemblyIdentity version=\"[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*\"/assemblyIdentity version=\"${VERSION}.0\"/" YoutubeDownloader.UI/app.manifest
-        fi
+        chmod +x build/*.sh
 
-    - name: Update app.manifest version (Windows)
-      if: runner.os == 'Windows'
+    # --- Windows Build ---
+    - name: Build (Windows)
+      if: matrix.os == 'windows-latest'
       run: |
-        $version = Get-Content VERSION
-        $manifestPath = "YoutubeDownloader.UI/app.manifest"
-        (Get-Content $manifestPath) -replace 'assemblyIdentity version="[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+"', "assemblyIdentity version=""$version.0""" | Set-Content $manifestPath
+        .\build\build_win.cmd ${{ matrix.target }}
 
-    # --- Windows/Linux Build ---
-    - name: Publish (Windows/Linux)
-      if: matrix.os != 'macos-latest'
+    - name: Zip Artifacts (Windows)
+      if: matrix.os == 'windows-latest'
       run: |
-        dotnet publish YoutubeDownloader.UI/YoutubeDownloader.UI.csproj -c Release -r ${{ matrix.target }} --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o release/${{ matrix.target }}
+        Compress-Archive -Path "release/${{ matrix.target }}/*" -DestinationPath "YoutubeDownloader-${{ matrix.target }}.zip"
 
-    - name: Rename executable (Linux)
-      if: matrix.target == 'linux-x64'
+    # --- Linux Build ---
+    - name: Build (Linux)
+      if: matrix.os == 'ubuntu-latest'
       run: |
-        mv release/${{ matrix.target }}/YoutubeDownloader.UI release/${{ matrix.target }}/YoutubeDownloader
-
-    - name: Rename executable (Windows)
-      if: matrix.target == 'win-x64'
-      run: |
-         mv release/${{ matrix.target }}/YoutubeDownloader.UI.exe release/${{ matrix.target }}/YoutubeDownloader.exe
+        ./build/build_linux.sh ${{ matrix.target }}
 
     - name: Zip Artifacts (Linux)
       if: matrix.os == 'ubuntu-latest'
@@ -72,82 +61,17 @@ jobs:
         cd release/${{ matrix.target }}
         zip -r ../../YoutubeDownloader-${{ matrix.target }}.zip .
 
-    - name: Zip Artifacts (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        Compress-Archive -Path release/${{ matrix.target }}/* -DestinationPath YoutubeDownloader-${{ matrix.target }}.zip
-
     # --- macOS Build ---
     - name: Install Dependencies (macOS)
       if: matrix.os == 'macos-latest'
       run: |
         brew install ffmpeg
+        chmod +x build/build_mac.sh
 
-    - name: Publish (macOS)
+    - name: Build (macOS)
       if: matrix.os == 'macos-latest'
       run: |
-        dotnet publish YoutubeDownloader.UI/YoutubeDownloader.UI.csproj -c Release -r ${{ matrix.target }} --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o release/${{ matrix.target }}/publish
-
-    - name: Create App Bundle (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        APP_NAME="YoutubeDownloader"
-        APP_DIR="release/${{ matrix.target }}/$APP_NAME.app"
-        PUBLISH_DIR="release/${{ matrix.target }}/publish"
-        ICON_SOURCE="YoutubeDownloader.UI/App.ico"
-        ICON_ICNS="YoutubeDownloader.UI/App.icns"
-        VERSION=$(cat VERSION)
-        
-        # Icon conversion
-        mkdir -p YoutubeDownloader.UI/App.iconset
-        ffmpeg -y -i "$ICON_SOURCE" YoutubeDownloader.UI/App.iconset/icon_256x256.png
-        sips -z 16 16     YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_16x16.png
-        sips -z 32 32     YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_16x16@2x.png
-        sips -z 32 32     YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_32x32.png
-        sips -z 64 64     YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_32x32@2x.png
-        sips -z 128 128   YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_128x128.png
-        sips -z 256 256   YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_128x128@2x.png
-        sips -z 256 256   YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_256x256.png
-        sips -z 512 512   YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_256x256@2x.png
-        sips -z 512 512   YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_512x512.png
-        sips -z 1024 1024 YoutubeDownloader.UI/App.iconset/icon_256x256.png --out YoutubeDownloader.UI/App.iconset/icon_512x512@2x.png
-        iconutil -c icns YoutubeDownloader.UI/App.iconset -o "$ICON_ICNS"
-        
-        # Create Structure
-        mkdir -p "$APP_DIR/Contents/MacOS"
-        mkdir -p "$APP_DIR/Contents/Resources"
-        
-        # Copy files
-        cp -a "$PUBLISH_DIR/." "$APP_DIR/Contents/MacOS/"
-        cp "$ICON_ICNS" "$APP_DIR/Contents/Resources/App.icns"
-        
-        # Create Info.plist
-        cat > "$APP_DIR/Contents/Info.plist" <<EOF
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <dict>
-            <key>CFBundleName</key>
-            <string>$APP_NAME</string>
-            <key>CFBundleDisplayName</key>
-            <string>$APP_NAME</string>
-            <key>CFBundleIdentifier</key>
-            <string>com.leeyu.$APP_NAME</string>
-            <key>CFBundleVersion</key>
-            <string>$VERSION</string>
-            <key>CFBundlePackageType</key>
-            <string>APPL</string>
-            <key>CFBundleSignature</key>
-            <string>????</string>
-            <key>CFBundleExecutable</key>
-            <string>YoutubeDownloader.UI</string>
-            <key>CFBundleIconFile</key>
-            <string>App</string>
-            <key>NSHighResolutionCapable</key>
-            <true/>
-        </dict>
-        </plist>
-        EOF
+        ./build/build_mac.sh ${{ matrix.target }}
 
     - name: Zip Artifacts (macOS)
       if: matrix.os == 'macos-latest'
