--- a/YoutubeDownloader.UI/YoutubeDownloader.UI.csproj
+++ b/YoutubeDownloader.UI/YoutubeDownloader.UI.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <AvaloniaResource Include="App.ico" />
+    <AvaloniaResource Include="Resources/**" />
   </ItemGroup>
 
   <ItemGroup>
